--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-My GitHub Page
+---
+layout: default
+---
+{{
+<div class="node sticky">
+ <h2 class="title"><a href="/node/1">Welkom bij TelePoesis.org</a></h2>
+
+ <div class="content">
+<p><img src="/sites/telepoesis.org/files/opzeekeren_klein.png" alt="gedicht" style="float: right;" /></p>
+<p>Onder het motto "Schoonheid die bijt" bestrijdt TelePoesis.org lelijkheid met schoonheid.</p>
+<p>We verdelen gratis een handig <a href="/node/16">mini-dichtbundeltje</a> om uit voor te lezen aan opdringerige (tele)verkopers. "Bijtend schoonheidsconcentraat" heeft een televerkoper dat ooit wel genoemd.</p>
+<p>Binnenkort houden we ook een <a href="/node/18">phone-in</a>. De irritantste telemarketingfirma's bellen we dan op. We lezen hen persoonlijk gedichten voor.</p>
+ </div>
+
+<div class="links"><ul class="links inline"><li class="node_submitted first last"></li>
+</ul></div>
+</div>
+}}
