--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
+title: TelePoesis.org | Schoonheid die bijt
 ---
-{{
 <div class="node sticky">
  <h2 class="title"><a href="/node/1">Welkom bij TelePoesis.org</a></h2>
 
@@ -15,4 +15,3 @@ layout: default
 <div class="links"><ul class="links inline"><li class="node_submitted first last"></li>
 </ul></div>
 </div>
-}}
