update header, cleanup contact page

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title: TelePoesis.org | Schoonheid die bijt
+---
+
+
 <div class="node">
  <div class="content">
 <p>Met vragen kan u terecht bij:</p>
