--- a/dichtbundeltje.html
+++ b/dichtbundeltje.html
@@ -5,7 +5,7 @@ title: TelePoesis.org | Schoonheid die bijt
 <div class="node">
  <div class="content">
 <p><ol>
-<li><a href="http://telepoesis.org/sites/telepoesis.org/files/telepoesis.pdf">Download</a> het mini-dichtbundeltje.</li>
+<li><a href="./files/telepoesis.pdf">Download</a> het mini-dichtbundeltje.</li>
 
 <li>Volg de <a href="17">vouwinstructies</a>.</li>
 <li>Uw dichtbundeltje voelt zich het best waar u er snel bijkan als u gebeld wordt: naast de telefoon, in uw binnenzak of in uw portefeuille.</li>
