fix vouwinstructies link

--- a/dichtbundeltje.html
+++ b/dichtbundeltje.html
@@ -7,7 +7,7 @@ title: TelePoesis.org | Schoonheid die bijt
 <p><ol>
 <li><a href="./files/telepoesis.pdf">Download</a> het mini-dichtbundeltje.</li>
 
-<li>Volg de <a href="17">vouwinstructies</a>.</li>
+<li>Volg de <a href="./vouwinstructies.html">vouwinstructies</a>.</li>
 <li>Uw dichtbundeltje voelt zich het best waar u er snel bijkan als u gebeld wordt: naast de telefoon, in uw binnenzak of in uw portefeuille.</li>
 <li>Krijgt u telefoon van een opdringerige televerkoper, haal dan uw bundeltje boven en lees eruit voor. Veel kans dat dit de laatste keer is geweest dat deze telespammer uw rust verstoord heeft.</li>
 </ol>
