--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: TelePoesis.org | Schoonheid die bijt
  <h2 class="title"><a href="/node/1">Welkom bij TelePoesis.org</a></h2>
 
  <div class="content">
-<p><img src="/sites/telepoesis.org/files/opzeekeren_klein.png" alt="gedicht" style="float: right;" /></p>
+<p><img src="images/opzeekeren_klein.png" alt="gedicht" style="float: right;" /></p>
 <p>Onder het motto "Schoonheid die bijt" bestrijdt TelePoesis.org lelijkheid met schoonheid.</p>
 <p>We verdelen gratis een handig <a href="./dichtbundeltje.html">mini-dichtbundeltje</a> om uit voor te lezen aan opdringerige (tele)verkopers. "Bijtend schoonheidsconcentraat" heeft een televerkoper dat ooit wel genoemd.</p>
 <p>Binnenkort houden we ook een <a href="/phonein.html">phone-in</a>. De irritantste telemarketingfirma's bellen we dan op. We lezen hen persoonlijk gedichten voor.</p>
