--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: TelePoesis.org | Schoonheid die bijt
 <p><img src="images/opzeekeren_klein.png" alt="gedicht" style="float: right;" /></p>
 <p>Onder het motto "Schoonheid die bijt" bestrijdt TelePoesis.org lelijkheid met schoonheid.</p>
 <p>We verdelen gratis een handig <a href="./dichtbundeltje.html">mini-dichtbundeltje</a> om uit voor te lezen aan opdringerige (tele)verkopers. "Bijtend schoonheidsconcentraat" heeft een televerkoper dat ooit wel genoemd.</p>
-<p>Binnenkort houden we ook een <a href="/phonein.html">phone-in</a>. De irritantste telemarketingfirma's bellen we dan op. We lezen hen persoonlijk gedichten voor.</p>
+<p>Binnenkort houden we ook een <a href="./phonein.html">phone-in</a>. De irritantste telemarketingfirma's bellen we dan op. We lezen hen persoonlijk gedichten voor.</p>
  </div>
 
 </div>
