update title bars

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@ title: TelePoesis.org | Schoonheid die bijt
 
 
 <div class="node">
+ <h2 class="title">Contact</h2>
  <div class="content">
 <p>Met vragen kan u terecht bij:</p>
 <p>Mark Van den Borre<br />
