--- a/dichtbundeltje.html
+++ b/dichtbundeltje.html
@@ -3,6 +3,7 @@ layout: default
 title: TelePoesis.org | Schoonheid die bijt
 ---
 <div class="node">
+ <h2 class="title">Dichtbundeltje</h2>
  <div class="content">
 <p><ol>
 <li><a href="./files/telepoesis.pdf">Download</a> het mini-dichtbundeltje.</li>
