--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: TelePoesis.org | Schoonheid die bijt
 ---
 
 <div class="node sticky">
- <h2 class="title"><a href="/node/1">Welkom bij TelePoesis.org</a></h2>
+ <h2 class="title">Welkom bij TelePoesis.org</h2>
 
  <div class="content">
 <p><img src="images/opzeekeren_klein.png" alt="gedicht" style="float: right;" /></p>
