--- a/vouwinstructies.html
+++ b/vouwinstructies.html
@@ -4,6 +4,7 @@ title: TelePoesis.org | Schoonheid die bijt
 ---
 
 <div class="node">
+ <h2 class="title">Vouwinstructies</h2>
  <div class="content">
 <p>Snelle vouwinstructies:</p>
 <object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/IAb31rIeGZo&color1=0xb1b1b1&color2=0xcfcfcf&hl=en&fs=1" /><param name="allowFullScreen" value="true" /><embed src="http://www.youtube.com/v/IAb31rIeGZo&color1=0xb1b1b1&color2=0xcfcfcf&fs=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="344"></embed></object><p>...of als dat een beetje te snel ging:</p>
