--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ title: TelePoesis.org | Schoonheid die bijt
 <p>Met vragen kan u terecht bij:</p>
 <p>Mark Van den Borre<br />
 
-<a href="mailto:mark@telepoesis.org">mark@telepoesis.org</a><br />
+<a href="mailto:mark@markvdb.be">mark@markvdb.be</a><br />
 +32 486 961726<br />
 Hogestraat 16<br />
 3000 Leuven<br />
